# woodchuck

./: .env.example  .gitignore  Cargo.toml  LICENSE  MAINTAINER.md  README.md  WOODCHUCK.md  playwright.config.ts
.claude/: CLAUDE.md
app/: index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts
app/e2e/: session-mobile.spec.ts
app/src/: App.tsx  sw.ts
app/src/api/: client.ts
app/src/components/: Button.tsx  ConfirmDialog.tsx  ConnectionStatus.tsx  CreateProjectDialog.tsx  CreateProjectForm.tsx  FileBrowser.tsx  FloatingActionButton.tsx  FolderCard.tsx  FolderPicker.tsx  GridCard.tsx  Input.tsx  Layout.tsx  LogoWatermark.tsx  MobileInputBar.tsx  NotificationBanner.tsx  ProjectSection.tsx  PullToRefresh.tsx  RadialMenu.tsx  Select.tsx  SessionCard.tsx  SessionInfoSheet.tsx  SessionPane.tsx  ShellPanel.tsx  ShortcutsHelp.tsx  SlashCommandMenu.tsx  StatusBadge.tsx  UpdateBanner.tsx  UploadStatus.tsx  XtermTerminal.tsx
app/src/context/: SessionStoreContext.tsx  ThemeContext.tsx  WebSocketContext.tsx
app/src/data/: insults.ts
app/src/hooks/: useCommands.ts  useDraggable.ts  useFolders.ts  (+13 more)
e2e/: deploy.spec.ts  grid-view.spec.ts  health.spec.ts  maintainer.spec.ts  projects.spec.ts  sessions.spec.ts
src/: config.rs  lib.rs  main.rs  service.rs
src/controller/: deploy.rs  deploy_settings.rs  maintainer.rs  mod.rs  poller.rs  ralph.rs
src/model/: commands.rs  error.rs  folder.rs  mod.rs  output.rs  session.rs  state.rs  types.rs
src/utils/: git.rs  hooks.rs  mod.rs  notify.rs  push.rs  session_store.rs  tmux.rs
(+29 files in other folders)
